
Se añaden más sonidos y una indicación cuando el juego está pausado.

Se añade el uso del vibrador.

Cambios presentados el 2021/02/26
---------------------------------
Se cambia el sistema de transiciones a uno más simple compuesto por varias clases.

Se crea la clase LevelCatalog como interfaz hacia el "catálogo" de niveles disponible.
Permite iterar sobre la información de los niveles existentes y en el futuro cercano
permitirá también leer y escribir los récords asociados a ellos.

Se rediseña la pantalla donde se muestran los resultados de la partida, de modo que
utiliza una estructura de tablas más compleja y colorida (no obstante, visualmente
es muy muy básica, pero ahora al menos es presentable).

Ya que aprender a hacer interfaces complejas es un mundo de por sí y me queda poco
tiempo para dedicarle a este trabajo, las demás pantallas tendrán una apariencia
similar.


Cambios presentados el 2021/02/27
---------------------------------
Se perfecciona la presentación de la pantalla de resultados con más músicas y
sonidos.

Se añade la clase Highscore para actuar como interfaz hacia las preferencias
compartidas donde se guardan los datos de la puntuación más alta en un nivel, se
hacen instancias de esta clase accesibles desde LevelInfo y se utiliza este nuevo
recurso para guardar los resultados en la pantalla de resultados.


Cambios presentados el 2021/03/05
---------------------------------
Se añade una primera versión solo parcialmente funcional del menú principal. Se
mejora el sistema de transiciones para poder introducir pausas inicial y final
en ellas. Se cambia el botón de aceptar del menú de resultados por dos botones,
uno para volver a jugar y otro para volver al menú principal.

Se añaden los menús de selección de mapas y previsualización de nivel. De este
modo es posible cargar los mapas disponibles en levels/.


Cambios presentados el 2021/03/06
---------------------------------
Se añade la música de nivel elegido.